# hympd

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  flake.nix  hmpd.cabal  hympd.cabal
app/: Browse.hs  Javascript.hs  Main.hs  Queue.hs  Stream.hs  Utility.hs  Web.hs
nix/: hix.nix
static/: manifest.json  styles.css
